typecheck-noAnnos.out
/Users/daniel/Documents/njit/WPI-Research/experiments-live/multi-version-control-wpi/src/main/java/org/plumelib/multiversioncontrol/MultiVersionControl.java:2082: error: [lowerbound:override.return] Incompatible return type.
    public int read() {
           ^
  found   : int
  required: @GTENegativeOne int
  Consequence: method in StreamOfNewlines
    int read(StreamOfNewlines this)
  cannot override method in InputStream
    @GTENegativeOne int read(InputStream this) throws IOException
/Users/daniel/Documents/njit/WPI-Research/experiments-live/multi-version-control-wpi/src/main/java/org/plumelib/multiversioncontrol/MultiVersionControl.java:303: error: [interning:type.checking.not.run] InterningChecker did not run because of a previous error issued by javac
public class MultiVersionControl {
       ^
/Users/daniel/Documents/njit/WPI-Research/experiments-live/multi-version-control-wpi/src/main/java/org/plumelib/multiversioncontrol/MultiVersionControl.java:303: error: [lock:type.checking.not.run] LockChecker did not run because of a previous error issued by javac
public class MultiVersionControl {
       ^
/Users/daniel/Documents/njit/WPI-Research/experiments-live/multi-version-control-wpi/src/main/java/org/plumelib/multiversioncontrol/MultiVersionControl.java:303: error: [nullness:type.checking.not.run] NullnessChecker did not run because of a previous error issued by javac
public class MultiVersionControl {
       ^
/Users/daniel/Documents/njit/WPI-Research/experiments-live/multi-version-control-wpi/src/main/java/org/plumelib/multiversioncontrol/MultiVersionControl.java:303: error: [regex:type.checking.not.run] RegexChecker did not run because of a previous error issued by javac
public class MultiVersionControl {
       ^
/Users/daniel/Documents/njit/WPI-Research/experiments-live/multi-version-control-wpi/src/main/java/org/plumelib/multiversioncontrol/MultiVersionControl.java:303: error: [builder:type.checking.not.run] ResourceLeakChecker did not run because of a previous error issued by javac
public class MultiVersionControl {
       ^
/Users/daniel/Documents/njit/WPI-Research/experiments-live/multi-version-control-wpi/src/main/java/org/plumelib/multiversioncontrol/MultiVersionControl.java:303: error: [signature:type.checking.not.run] SignatureChecker did not run because of a previous error issued by javac
public class MultiVersionControl {
       ^
/Users/daniel/Documents/njit/WPI-Research/experiments-live/multi-version-control-wpi/src/main/java/org/plumelib/multiversioncontrol/MultiVersionControl.java:303: error: [signedness:type.checking.not.run] SignednessChecker did not run because of a previous error issued by javac
public class MultiVersionControl {
       ^
/Users/daniel/Documents/njit/WPI-Research/experiments-live/multi-version-control-wpi/src/main/java/org/plumelib/multiversioncontrol/MultiVersionControl.java:303: error: [initializedfields:type.checking.not.run] InitializedFieldsChecker did not run because of a previous error issued by javac
public class MultiVersionControl {
       ^
9 errors